# cxxsat

./: CMakeLists.txt  LICENSE  README.md  Solver.cpp  Solver.h  VarManager.cpp  VarManager.h  debug.h  keys.h  vars.cpp  vars.h
test/: CMakeLists.txt  unit-solver.cpp
